--- a/admin-index.html
+++ b/admin-index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="./assets/css/Admin-index.css" />
   </head>
   <body>
-    <div include-html="modal/authHeader.html"></div>
-    <header>Trang Quản Trị - Admin Dashboard</header>
+    <header class="admin-header">
+      <h1 class="admin-header__title">CodeCrafted - Trang Quản Trị</h1>
+    </header>
 
     <div class="container">
       <div class="tabs">
@@ -20,7 +21,6 @@
         <div class="tab" data-tab="users">Quản lý Người dùng</div>
       </div>
 
-      <!-- Khóa học -->
       <section id="courses" class="tab-content active">
         <button class="add-new" id="btn-add-course">+ Thêm Khóa học</button>
         <table>
@@ -32,13 +32,10 @@
               <th>Hành động</th>
             </tr>
           </thead>
-          <tbody id="course-list">
-            <!-- Dữ liệu khóa học sẽ hiển thị ở đây -->
-          </tbody>
+          <tbody id="course-list"></tbody>
         </table>
       </section>
 
-      <!-- Người dùng -->
       <section id="users" class="tab-content" style="display: none">
         <button class="add-new" id="btn-add-user">+ Thêm Người dùng</button>
         <table>
@@ -51,14 +48,11 @@
               <th>Hành động</th>
             </tr>
           </thead>
-          <tbody id="user-list">
-            <!-- Dữ liệu người dùng sẽ hiển thị ở đây -->
-          </tbody>
+          <tbody id="user-list"></tbody>
         </table>
       </section>
     </div>
 
-    <!-- Modal Thêm/Sửa khóa học -->
     <div class="modal-bg" id="modal-course">
       <div class="modal">
         <div class="modal-close" id="close-course-modal">&times;</div>
@@ -79,7 +73,6 @@
       </div>
     </div>
 
-    <!-- Modal Thêm/Sửa người dùng -->
     <div class="modal-bg" id="modal-user">
       <div class="modal">
         <div class="modal-close" id="close-user-modal">&times;</div>
